refactor: clean env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     environment:
       KONG_DATABASE: "off"
       KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
-      KONG_DECLARATIVE_CONFIG: /etc/kong/config.yml
-      KONG_GO_PLUGINS_DIR: /tmp/go-plugins
     healthcheck:
       test: ["CMD", "curl", "-f", "http://kong:8001"]
       interval: 5s
@@ -19,5 +17,5 @@ services:
       - "8000:8000"
       - "8444:8444"
     volumes:
-      - ./kong.yml:/etc/kong/kconfigong.yml # already copied from the Dockerfile
+      - ./config.yml:/etc/kong/config.yml # already copied from the Dockerfile
       - ./kong.conf:/etc/kong/kong.conf
