--- a/kong.conf
+++ b/kong.conf
@@ -119,7 +119,7 @@ plugins = bundled,rate-limiting,go-key-checker               # Comma-separated l
                                  # Path for the go-pluginserver executable,
                                  # used for running Kong plugins written in Go.
 
-#go_plugins_dir = off            # Directory for installing Kong plugins
+go_plugins_dir = /tmp/go-plugins            # Directory for installing Kong plugins
                                  # written in Go.
                                  #
                                  # This value can be set to `off`, thus disabling
@@ -694,7 +694,7 @@ plugins = bundled,rate-limiting,go-key-checker               # Comma-separated l
 # `declarative_config` property, or via the Admin API using the `/config`
 # endpoint.
 
-#database = postgres             # Determines which of PostgreSQL or Cassandra
+database = off           # Determines which of PostgreSQL or Cassandra
                                  # this node will use as its datastore.
                                  # Accepted values are `postgres`,
                                  # `cassandra`, and `off`.
@@ -831,7 +831,7 @@ plugins = bundled,rate-limiting,go-key-checker               # Comma-separated l
                                              # This value is only used during
                                              # migrations.
 
-#declarative_config =           # The path to the declarative configuration
+declarative_config = /etc/kong/config.yml          # The path to the declarative configuration
                                 # file which holds the specification of all
                                 # entities (Routes, Services, Consumers, etc.)
                                 # to be used when the `database` is set to
